# integration_projet

projectC/: Makefile  alarmante.txt  anneeseche.txt  capteur.txt  client.txt  clientchercher.txt  config.status  defect.txt  employechercher.txt  enregistrement.txt  plante.txt  projectc.glade.bak  temperature.txt
projectC/autom4te.cache/: requests
projectC/src/: Makefile  Makefile.am  Makefile.in  annee.c  annee.h  callbacks.c  callbacks.h  capteur.c  capteur.h  client.c  client.h  employe.c  employe.h  enregistrement.c  enregistrement.h  interface.c  interface.c.bak  interface.h  main.c  plante.c  plante.h  projectc
projectC/src/.deps/: annee.Po  callbacks.Po  client.Po  employe.Po  enregistrement.Po  plante.Po
